# claude-projects

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  FLOW_GATING_BENCHMARK_SUMMARY.md  FLOW_PANEL_OPTIMIZER_SUMMARY.md  README.md  TODO.md  pyrightconfig.json  ruff.toml
libs/: pyproject.toml  schema_version.py
libs/checkpoint/: README.md  __init__.py  decorator.py  runner.py
libs/checkpoint/tests/: __init__.py  test_checkpoint.py
libs/hypothesis_pipeline/: DESIGN_uncertainty_estimation.md  __init__.py  base.py  bias_detection.py  calibration.py  cli.py  cli_judge.py  config.py  contamination.py  context.py  cost.py  cross_validator.py  diversity.py  experiment_tracking.py  llm_judge.py  models.py  pareto.py  pipeline.py  prompt_sensitivity.py  rag.py  requirements.txt  robustness.py  selective_prediction.py  statistics.py  strategies.py  temperature_bootstrap.py  tracker.py
libs/hypothesis_pipeline/examples/: run_synthetic_ablation.py
libs/hypothesis_pipeline/tests/: __init__.py  test_cross_validator.py  test_evaluation_modules.py  test_tracker.py
libs/mcp_tester/: README.md  __init__.py  evaluators.py  models.py  study.py
libs/model_client/: __init__.py  cache.py  cli_client.py  protocols.py  retry.py
libs/model_client/tests/: __init__.py  test_model_client.py
libs/paper_download/: README.md  __init__.py  __main__.py  pmc_client.py
libs/paths/: __init__.py
libs/results_processor/: README.md  __init__.py  __main__.py  exporter.py
libs/results_processor/tests/: __init__.py  test_results_processor.py
projects/drugdevbench/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
projects/drugdevbench/results/: pipeline_test_summary.txt
projects/drugdevbench/scripts/: download_figures.py  generate_sample_figures.py  test_pipeline.py
projects/drugdevbench/tests/: __init__.py  test_evaluation.py  test_models.py  test_prompts.py  test_schemas.py
projects/flow_gating_benchmark/: BENCHMARK_RESULTS_SUMMARY.md  CLAUDE.md  DETAILED_ANALYSIS.md  FLOWBENCH_ANALYSIS.md  FREQUENCY_CONFOUND_RESULTS.md  README.md  STUDY_SUMMARY.md  TODO.md  VISUALIZATION_RECOMMENDATIONS.md  analyze_frequency_confound.py  fetch_fresh_frequencies.py  pyproject.toml  requirements.txt  run_benchmark.py  run_cross_validation.py  run_hypothesis_tests.py  run_local_models.py  run_reasoning_comparison.py  verify_frequency_correlation.py  verify_r2_robust.py  visualize_frequency_confound.py
projects/flow_gating_benchmark/configs/: gating_ablation.yaml  marker_database.json
projects/flow_gating_benchmark/data/: expert_validation_template.yaml
projects/flow_gating_benchmark/design_docs/: confidence_elicitation_design.md  metrics_progression_report.md  multi_turn_evaluation_protocol.md  synonym_failure_analysis.md
projects/flow_gating_benchmark/docs/: DETAILED_RESULTS.md  FUTURE_RESEARCH_DIRECTIONS.md  GEMINI_DEBUG_RUN.py  RAG_TEST_SUITE_PLAN.md  TEST_PLAN.md  eval_improvements_roadmap.md  gating_workflow_guide.md
projects/flow_gating_benchmark/results/: BENCHMARK_RESULTS_SUMMARY.md  CONCLUSIONS.md  REPORT.md  benchmark_results_20260107_075751.json  benchmark_results_20260107_082035.json  experiment_results_20260107_115526.csv  experiment_results_20260109_192747.json  experiment_results_20260109_195116.json  experiment_results_20260109_210320.json  experiment_results_20260109_210400.json  experiment_summary_20260107_115526.txt  experiment_summary_20260109_192747.txt  experiment_summary_20260109_195116.txt  intermediate_results.json
projects/flow_gating_benchmark/scripts/: analyze_judge_vs_rules.py  analyze_structure_errors.py  analyze_with_biological_context.py  check_contamination.py  convert_to_ground_truth.py  download_omip_papers.py  export_results_csv.py  extract_from_pmc_xml.py  extract_from_xml.py  extract_multi_method.py  generate_additional_testcases.py  generate_detailed_reports.py  generate_full_review.py  generate_omip_testcases.py  generate_review_report.py  judge.py  parse_gating_with_llm.py  pipeline_utils.py  predict.py  rerun_aggregated_errors.py  rerun_blocked.py  rerun_missing_api.py  rerun_truncated_predictions.py  run_ab_test.py  run_aggregated_judge.py  run_aggregated_multijudge.py  run_aggregated_multijudge_api.py  run_aggregated_multijudge_flash.py  run_aggregated_multijudge_opus.py  run_batched_judge.py  run_experiment.py  run_full_benchmark.py  run_full_comparison.sh  run_gating_ablation.py  run_gemini_benchmark.py  run_judge_on_results.py  run_judge_sonnet.py  run_judge_with_env.sh  run_modular_pipeline.py  run_opus_experiment.py  (+7 more)
projects/flow_gating_benchmark/src/: __init__.py
projects/flow_gating_benchmark/tests/: __init__.py  conftest.py  test_equivalences.py  test_graph_similarity.py  test_hierarchy.py  test_hypothesis_tests.py  test_integration.py  test_llm_client.py  test_marker_logic.py  test_metrics.py  test_paper_parser.py  test_pass_at_k.py  test_properties.py  test_response_parser.py  test_schemas.py  test_scorer.py  test_semantic_similarity.py  test_string_matching_confound.py  test_task_failure.py  test_tracker.py
projects/flow_panel_optimizer/: CLAUDE.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
projects/flow_panel_optimizer/docs/: BLOG_POST_OUTLINE.md  FRAMEWORK_AND_RESULTS.md  TODO_TOOL_ERROR_ANALYSIS.md
projects/flow_panel_optimizer/results/: CONCLUSIONS.md  REPORT.md  opus_summary_20260107_115213.txt  sonnet_summary_20260107_110314.txt
(+500 files in other folders)
