[project]
name = "drugdevbench"
version = "0.1.0"
description = "Benchmark for evaluating LLM interpretation of drug development figures"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "John Balibalos"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["llm", "benchmark", "drug-development", "figure-interpretation", "scientific-figures"]

dependencies = [
    # LLM APIs
    "litellm>=1.0.0",

    # Data handling
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "datasets>=2.14.0",          # Hugging Face datasets

    # Paper sourcing
    "biopython>=1.80",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",

    # Image handling
    "pillow>=10.0.0",
    "pdf2image>=1.16.0",

    # Analysis
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.11.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jbalibalos/drugdevbench"
Repository = "https://github.com/jbalibalos/drugdevbench"
Documentation = "https://github.com/jbalibalos/drugdevbench#readme"

[project.scripts]
drugdevbench = "drugdevbench.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drugdevbench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
